@@ -1,4 +1,5 @@
 1.0.0
+Fixed stacking.
 Fixed changing themes.
 Fixed reload modifier keys.
 Done dragging window off left/right edge of screen changes current desktop.
